src/App.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
.latoFamily {
  font-family: "Lato", sans-serif;
}
.darkModeButton div {
  position: relative;
  transition: all 0.4s;
}
.darkModeButton.active div {
  transform: translateX(43px);
}
.darkModeButton div .darkModeIcon {
  display: none;
}
.darkModeButton.active div .darkModeIcon {
  display: block;
}
.darkModeButton.active div .lightModeIcon {
  display: none;
}
.searchIcon {
  fill: white;
}
html.dark .searchIcon {
  fill: #5c426c;
}
.contentButton.selected p {
  color: #e1917e;
}
.contentButton div {
  width: 105px;
  height: 8px;
  border-radius: 8px;
  background-color: transparent;
}
.contentButton.selected div {
  background-color: #e1917e;
}
.addButton {
  box-shadow: 0px 4px 31px 10px rgba(0, 0, 0, 0.25);
}
.searchInputGroup {
  box-shadow: 0px 4px 43px rgba(0, 0, 0, 0.2);
}
.noteContent {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 9;
  -webkit-box-orient: vertical;
}
.noteTextArea {
  height: calc(100vh - 200px);
}
.desktopNoteTextArea {
  height: calc(100% - 180px);
}
.viewNoteTextArea {
  height: calc(100vh - 230px);
}
.desktopViewNoteArea {
  height: calc(100vh - 328px);
}
.desktopEditNoteArea {
  height: calc(100vh - 341px);
}
.cover {
  object-fit: cover;
}
.desktopTextArea {
  resize: none;
}
.loadingCircle {
  animation: bounce 1s ease-in-out infinite;
}
.loadingCircle:nth-of-type(2) {
  animation-delay: 0.1s;
}
@keyframes bounce {
  0% {
    transform: translateY(-10px);
  }
  50% {
    transform: translateY(10px);
  }
  100% {
    transform: translateY(-10px);
  }
}
.expandIcon {
  transition: all 0.4s;
}
.expandIcon.expanded {
  transform: rotateZ(180deg);
}
.colorCircleContainer::-webkit-scrollbar {
  display: none;
}
.optionsContainer {
  transition: transform 0.4s, background-color 0.15s;
}
.optionsContainer.expanded {
  transform: translateY(-110px);
}
.closeNoteOptions {
  background-color: rgba(0, 0, 0, 0.9);
}
.dongle {
  background-color: rgba(50, 53, 60, 0.7);
}
.noteOptionsContainer {
  transition: all 0.3s ease-in-out;
}
.noteOptionsContainer.invisible {
  transform: translateY(230px);
}
.closeNoteOptions {
  transition: all 0.3s ease-in-out;
}
.closeNoteOptions.invisible {
  opacity: 0;
}
.navItem {
  transition: all 0.4s;
  cursor: pointer;
}
.closeMobileNav {
  background-color: rgba(0, 0, 0, 0);
  backdrop-filter: blur(17px) opacity(0);
  transition: backdrop-filter 0.4s;
  z-index: 0;
}
.closeMobileNav.showing {
  backdrop-filter: blur(17px) opacity(1);
  background-color: rgba(0, 0, 0, 0.65);

  z-index: 10;
}
.mobileNavPopUp {
  z-index: -5;
  opacity: 0;
  transform: translateY(200px);
  transition: all 0.4s;
}
.mobileNavPopUp.visible {
  transform: translateY(0);
  opacity: 1;
  z-index: 20;
}
.desktopNavButton {
  transition: all 0.4s;
}

.desktopNavText {
  transition: all 0.4s;
}
.desktopNavIcon {
  fill: #48485d;
  transition: all 0.4s;
}
.desktopNavIcon.selected {
  fill: white;
}
/* Styles for the desktop options container */
.desktopOptions {
  opacity: 1;
  transition: all 0.2s;
}
.hiddenDesktopOptions {
  opacity: 0;
  transform: scale(0.75);
  z-index: -1;
}
/* Styles to change the width of the desktop Notes section container */
.desktopNoteSection::-webkit-scrollbar,
html.dark .desktopViewNoteScrollbar::-webkit-scrollbar {
  width: 10px;
}
.desktopViewNoteScrollbar::-webkit-scrollbar {
  width: 20px;
}
.desktopNoteSection::-webkit-scrollbar-track,
.desktopViewNoteScrollbar::-webkit-scrollbar-track {
  background: rgb(255, 255, 255);
  border-radius: 8px;
}
html.dark .desktopNoteSection::-webkit-scrollbar-track,
html.dark .desktopViewNoteScrollbar::-webkit-scrollbar-track {
  background: rgb(21 23 34); /* color of the tracking area */
}

.desktopNoteSection::-webkit-scrollbar-thumb,
.desktopViewNoteScrollbar::-webkit-scrollbar-thumb {
  border-radius: 20px; /* roundness of the scroll thumb */
  border: 0px solid white;
  background-color: darkgrey;
}
.desktopNoteSection::-webkit-scrollbar-thumb {
  border: 3px solid white;
  background-color: lightgrey;
}
.desktopViewNoteScrollbar::-webkit-scrollbar-thumb {
  border: 8px solid white;
}

html.dark .desktopNoteSection::-webkit-scrollbar-thumb,
html.dark .desktopViewNoteScrollbar::-webkit-scrollbar-thumb {
  border: 3px solid rgb(21 23 34); /* creates padding around scroll thumb */
  background-color: darkgrey; /* color of the scroll thumb */
}
/* Styles for the logo font */
.logo {
  font-family: "Lato", sans-serif;
}

